# tidycensus

./: pyproject.toml
src/tidycensus/: __init__.py  acs.py  loaders.py  utils.py
src/tidycensus/data/: fips_state_table.csv
tests/: test_tidycensus.py
