[tool.poetry]
name = "tidycensus"
version = "0.1.0"
description = ""
authors = ["Nick Hand <nicholas.adam.hand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
cenpy = "^1.0.0"
loguru = "^0.5.3"
black = "^20.8b1"
isort = "^5.8.0"
tryagain = "^1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.14"
ipython = "^7.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
